Content edits in view files.

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,9 +1,9 @@
-﻿<h1>
-    Contact Me <small>We should grab a drink!</small>
-</h1>
+﻿
 <div class="row">
     <div class="col-md-6 col-sm-6">
-        <p>&nbsp;</p>
+        <h1>
+            Contact Me
+        </h1>
         <p>
             <a href="mailto:joshbula@gmail.com" target="_blank">joshbula@gmail.com</a>
         </p>
@@ -18,9 +18,6 @@
         </p>
         <p>
             <a href="#/">joshbula.com</a>
-        </p>
-        <p>
-            <a href="http://djjoshuabula.com" target="_blank">DJJoshuaBula.com</a>
         </p>
     </div>
     <div class="col-md-6 col-sm-6">
