--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,13 +7,10 @@
     and the <a href="http://faea.org" target="_blank">Florida Art Education Association</a>. In addition to full-stack web development, I take care of all desktop support and network administration duties for the CFAE office and staff.
 </p>
 <p>
-    Prior to working for CFAE, I was a high school band director for 10 years in Alachua, Brevard, and most recently Leon High School.
-    I have PhD and Bachelor degrees in Music Education from Flordia State University, and a Masters in Music Conducting from the University of South Florida.
+    Prior to working for CFAE, I was a high school band director, most recently working at Leon High School in Tallahassee. I've been obsessed with both music and computers
+    since I was in middle school, and building websites as a hobby since 1992. When I quit teaching to work on my PhD I got a part-time job as a web developer at FSU to pay my mortgage.
+    FMEA found out and hired me away to do their website, and I eventually took over the whole I.T. department.
 </p>
 <p>
-    "What's with all the music stuff? I thought you were a web developer!?" Yeah, I've been obsessed with both music and computers since I was in middle school, and building websites as a hobby since 1992. When I quit teaching to work on
-    my PhD I got a part-time job as a web developer at FSU to pay my mortgage. FMEA found out and hired me away to do their website, and I gradually took over the entire CFAE I.T. department.
-</p>
-<p>
-    I currently live in Tallahassee with my pit bull mix Marty. Some other interests include running, dog training, wine, craft beer, whisky, and electronic dance music--I was a House Music Club DJ for over 17 years.
+    I currently live in Tallahassee with my pit bull mix named Marty. Some other things I'm interested in, but not necessarily good at, include running, dog training, wine tasting, craft beer, whisky, food, and house music.
 </p>
