--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -10,7 +10,7 @@
 </dl>
 <dl class="dl-horizontal">
     <dt>Mobile:</dt>
-    <dd>Apache Cordova. I did an app in Objective-C once, but I'm all javascript and Cordova now. I might start learning Xamarin if Microsoft starts including it with the MSDN subscription.</dd>
+    <dd>Apache Cordova</dd>
 </dl>
 <dl class="dl-horizontal">
     <dt>Content Management: </dt>
@@ -18,5 +18,5 @@
 </dl>
 <dl class="dl-horizontal">
     <dt>Network Admin.: </dt>
-    <dd>Networking, Windows Server, Active Directory, Hyper-V, Untangle NG</dd>
+    <dd>Networking, Windows Server, CentOS Linux, Active Directory, Hyper-V</dd>
 </dl>
