--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -211,6 +211,7 @@ img.masthead-brand {
 
 .table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
     border-top-color: rgba(255,255,255,.25);
+    border-top: none;
 }
 
 
@@ -227,3 +228,4 @@ img.masthead-brand {
 .ng-enter-active {
     opacity: 1;
 }
+
