--- a/app/views/resume.html
+++ b/app/views/resume.html
@@ -1,10 +1,36 @@
-﻿<table class="table table-condensed ">
+﻿<h2>Education</h2>
+    <p>
+        <strong>PhD in Music Education</strong>
+        <br />
+        Florida State University, 2011
+        <br />
+        Focus: Commercial Music, Recording and Production, Non-Traditional Music Students
+        <br />
+    </p>
+    <p>
+        <strong>Master of Music: Instrumental Conducting</strong>
+        <br />
+        University of South Florida, 2001
+        <br />
+        Focus: Band, Wind Enemble, Chamber Ensemble, and Orchestral Conducting
+    </p>
+    <p>
+        <strong>Bachelor of Music Education</strong>
+        <br />
+        Florida State University, 1997
+        <br />
+        Focus: Band, Percussion
+    </p>
+
+
+<h2>Work Experience</h2>
+<table class="table table-condensed ">
     <tbody>
         <tr>
             <td width="111" valign="top"><div align="right" width="150px">2009-Present</div></td>
             <td width="424" valign="top">
                 <p>
-                    <strong>Center for Fine Arts Education</strong> (Florida Music Educators Association, Florida School Music Association, and Florida Art Educators Association)
+                    <strong>Center for Fine Arts Education</strong> (Florida Music Education Association, Florida School Music Association, and Florida Art Educators Association)
                     - Web Development, Director of Information Technology
                 </p>
             </td>
@@ -32,7 +58,7 @@
             </td>
         </tr>
         <tr>
-            <td valign="top"><p align="right">2004-Present</p></td>
+            <td valign="top"><p align="right">2004-2008</p></td>
             <td valign="top">
                 <p>
                     <strong>
@@ -42,7 +68,7 @@
             </td>
         </tr>
         <tr>
-            <td valign="top"><p align="right">2004-2008</p></td>
+            <td valign="top"><p align="right">2004-Present</p></td>
             <td valign="top">
                 <p>
                     <strong>Florida</strong><strong> Bandmasters Association</strong>  <br />
