Minor content revisions and code clean-up.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <p>
-    Hi, I'm Josh!
+    Hello!
 </p>
 <p>
     I'm currently the web developer and director of information technology for the <a href="http://cfaefl.org" target="_blank">Center for Fine Arts Education</a>, where I write and maintain
@@ -9,8 +9,14 @@
 <p>
     Prior to working for CFAE, I was a high school band director, most recently working at Leon High School in Tallahassee. I've been obsessed with both music and computers
     since I was in middle school, and building websites as a hobby since 1992. When I quit teaching to work on my PhD I got a part-time job as a web developer at FSU to pay my mortgage.
-    FMEA found out and hired me away to do their website, and I eventually took over the whole I.T. department.
+    FMEA found out and hired me away to do their website, and I eventually took over all web development and I.T. duties.
 </p>
 <p>
     I currently live in Tallahassee with my pit bull mix named Marty. Some other things I'm interested in, but not necessarily good at, include running, dog training, wine tasting, craft beer, whisky, food, and house music.
+</p>
+<p>
+    &nbsp;
+</p>
+<p>
+    Oh, and if you're looking for a Club DJ named Joshua Bula, you can find him <a href="http://djjoshuabula.com" target="_blank">here</a>.
 </p>
