--- a/app/views/resume.html
+++ b/app/views/resume.html
@@ -1,26 +1,26 @@
 ﻿<h2>Education</h2>
-    <p>
-        <strong>PhD in Music Education</strong>
-        <br />
-        Florida State University, 2011
-        <br />
-        Focus: Commercial Music, Recording and Production, Non-Traditional Music Students
-        <br />
-    </p>
-    <p>
-        <strong>Master of Music: Instrumental Conducting</strong>
-        <br />
-        University of South Florida, 2001
-        <br />
-        Focus: Band, Wind Enemble, Chamber Ensemble, and Orchestral Conducting
-    </p>
-    <p>
-        <strong>Bachelor of Music Education</strong>
-        <br />
-        Florida State University, 1997
-        <br />
-        Focus: Band, Percussion
-    </p>
+<p>
+    <strong>PhD in Music Education</strong>
+    <br />
+    Florida State University, 2011
+    <br />
+    Focus: Commercial Music, Recording and Production, Non-Traditional Music Students
+    <br />
+</p>
+<p>
+    <strong>Master of Music: Instrumental Conducting</strong>
+    <br />
+    University of South Florida, 2001
+    <br />
+    Focus: Band, Wind Enemble, Chamber Ensemble, and Orchestral Conducting
+</p>
+<p>
+    <strong>Bachelor of Music Education</strong>
+    <br />
+    Florida State University, 1997
+    <br />
+    Focus: Band, Percussion
+</p>
 
 
 <h2>Work Experience</h2>
@@ -30,14 +30,25 @@
             <td width="111" valign="top"><div align="right" width="150px">2009-Present</div></td>
             <td width="424" valign="top">
                 <p>
-                    <strong>Center for Fine Arts Education</strong> (Florida Music Education Association, Florida School Music Association, and Florida Art Educators Association)
-                    - Web Development, Director of Information Technology
+                    <strong>Center for Fine Arts Education</strong>
+                    <br />
+                    (Florida Music Education Association, Florida School Music Association, and Florida Art Educators Association)
+                    <br />
+                    Web Development, Director of Information Technology
                 </p>
             </td>
         </tr>
         <tr>
             <td valign="top"><div align="right">2008-2009</div></td>
-            <td valign="top"><strong>Claude Pepper Center for Intercultural Dialogue (FSU College of Social Sciences)</strong> - Web Development, IT Support</td>
+            <td valign="top">
+                <strong>
+                    Claude Pepper Center for Intercultural Dialogue
+                    <br />
+                    (FSU College of Social Sciences)
+                </strong>
+                <br />
+                Web Development: Front-end and Drupal, Office Desktop Support
+            </td>
         </tr>
         <tr>
             <td valign="top"><p align="right">2002-2008</p></td>
@@ -49,7 +60,7 @@
             </td>
         </tr>
         <tr>
-            <td valign="top"><p align="right">2002-2008</p></td>
+            <td valign="top"><p align="right">2002-Present</p></td>
             <td valign="top">
                 <p>
                     <strong>Freelance Web Design and Technical Support</strong><br />
@@ -78,7 +89,13 @@
         </tr>
         <tr>
             <td valign="top"><p align="right">June 2004</p></td>
-            <td valign="top"><p><strong>Florida</strong><strong> State University</strong><strong> Summer Music Camps</strong>  Guest Conductor for High School Band Camp</p></td>
+            <td valign="top">
+                <p>
+                    <strong>Florida</strong><strong> State University</strong><strong> Summer Music Camps</strong>
+                    <br />
+                    Guest Conductor for High School Band Camp
+                </p>
+            </td>
         </tr>
         <tr>
             <td valign="top"><p align="right">June 2003</p></td>
