--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -17,6 +17,9 @@
             <a href="https://www.instagram.com/joshbula/" target="_blank">Instagram @joshbula</a>
         </p>
         <p>
+            <a href="https://github.com/joshbula" target="_blank">GitHub.com/joshbula</a>
+        </p>
+        <p>
             <a href="#/">joshbula.com</a>
         </p>
     </div>
