--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -1,4 +1,9 @@
-﻿<h1>Skills</h1>
+﻿<h1>Development Skills</h1>
+<p>
+    <em>
+        Jack of all trades, master of none...
+    </em>
+</p>
 
 <dl class="dl-horizontal">
     <dt>Server Side:</dt>
@@ -19,4 +24,8 @@
 <dl class="dl-horizontal">
     <dt>Network Admin.: </dt>
     <dd>Networking, Windows Server, CentOS Linux, Active Directory, Hyper-V</dd>
+</dl>
+<dl class="dl-horizontal">
+    <dt>Desktop Apps:</dt>
+    <dd>WPF, WIX Toolkit</dd>
 </dl>
